# SDL2-Basics

./: .gitignore  CMakeLists.txt  game.cpp  main.cpp
.cache/clangd/index/: constants.hpp.12BA4C0B84172730.idx  game.cpp.996D811ED79A489B.idx  game.hpp.5BA998A137D26059.idx  main.cpp.4EC666E094E6FA5C.idx
cmake_modules/: FindSDL2.cmake
include/: constants.hpp  game.hpp
